[gd_scene load_steps=6 format=2]

[ext_resource path="res://Scripts/HotbarSlot.gd" type="Script" id=1]
[ext_resource path="res://Assets/UI/HotBar/ItemSlotSelected.png" type="Texture" id=2]
[ext_resource path="res://Assets/UI/HotBar/ItemSlotHovered.png" type="Texture" id=3]
[ext_resource path="res://Assets/UI/HotBar/jeanpocket.png" type="Texture" id=4]

[sub_resource type="StyleBoxTexture" id=1]
texture = ExtResource( 4 )
region_rect = Rect2( 0, 0, 20, 18 )

[node name="Panel" type="Panel"]
margin_left = -2.0
margin_top = -1.0
margin_right = 18.0
margin_bottom = 17.0
rect_min_size = Vector2( 20, 18 )
rect_pivot_offset = Vector2( 10, 9 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelectedTexture" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -9.0
margin_right = 10.0
margin_bottom = 9.0
mouse_filter = 2
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HoveredTexture" type="TextureRect" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -10.0
margin_top = -9.0
margin_right = 10.0
margin_bottom = 9.0
mouse_filter = 2
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HotbarLabel" type="Label" parent="."]
margin_top = -1.0
margin_right = 4.0
margin_bottom = 12.0
custom_colors/font_color = Color( 1, 0.8, 0.458824, 1 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="gui_input" from="." to="." method="_on_self_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_self_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_self_mouse_exited"]
